--- a/web_server/configparser/defaultConfig/testMultiple.conf
+++ b/web_server/configparser/defaultConfig/testMultiple.conf
@@ -1,32 +1,15 @@
 server {
     listen 8080;
     server_name server1.com;
+    cgi .php testing
+    error_page 404 ../www/penguinserv/errorPages/404error.html;     # default error page
+    error_page 405 ../www/penguinserv/errorPages/405error.html;     # default error page
+
 
     location / {
-        root /var/www/server1;
+        root ../www/penguinserv/;
         index index.html;
         allow_methods GET;
     }
 }
 
-server {
-    listen 8081;
-    server_name server2.com;
-
-    location / {
-        root /var/www/server2;
-        index index.html;
-        allow_methods GET, PUT;
-    }
-}
-
-server {
-    listen 8082;
-    server_name server3.com;
-
-    location / {
-        root /var/www/server3;
-        index index.html;
-        allow_methods GET, POST;
-    }
-}
