feat: :zap: starting

--- a/web_server/configparser/defaultConfig/default.conf
+++ b/web_server/configparser/defaultConfig/default.conf
@@ -1,5 +1,6 @@
 server {
   listen 0.0.0.0:8001;                        # listening port, mandatory parameter
+  cgi .php testing
   server_name default;                # specify server_name, need to be added into /etc/hosts to work
   error_page 404 ../www/penguinserv/errorPages/404error.html;     # default error page
   client_max_body_size 1024;          # max request body size in bytes
