--- a/web_server/configparser/defaultConfig/default.conf
+++ b/web_server/configparser/defaultConfig/default.conf
@@ -11,7 +11,7 @@ server {
       root ../www/penguinserv/;       # root folder of site directory, full or relative path, mandatory parameter
       autoindex on;                   # turn on/off directory listing
       index index.html;               # default page when requesting a directory, copies root index by default
-      allow_methods POST GET;         # allowed methods in location, GET only by default
+      allow_methods POST GET;         # allowed methods in loc, GET only by default
       }
 
   location /tours {      
@@ -23,14 +23,6 @@ server {
   location /pengu {                   
       return /tours;                   # redirect
       }
-
-    #       location /cgi-bin {
-    #     root ./;
-    #     allow_methods GET POST DELETE;
-    #     index time.py;
-    #     cgi_path /usr/bin/python3 /bin/bash;
-    #     cgi_ext .py .sh;
-    # }
   }
 
   
