--- a/web_server/ConfigFiles/testMultiple.conf
+++ b/web_server/ConfigFiles/testMultiple.conf
@@ -2,12 +2,12 @@ server {
     listen 8081;
     server_name server1.com;
     cgi .php testing
-    error_page 404 ../www/penguinserv/errorPages/404Error.html;     # default error page
-    error_page 405 ../www/penguinserv/errorPages/405Error.html;     # default error page
+    error_page 404 web_server/www/penguinserv/errorPages/404Error.html;     # default error page
+    error_page 405 web_server/www/penguinserv/errorPages/405Error.html;     # default error page
 
 
     location / {
-        root ../www/penguinserv/;
+        root web_server/www/penguinserv/;
         index index.html;
         allow_methods GET;
     }
@@ -21,18 +21,18 @@ server {
 server {
     listen 8083;
     server_name server1.com;
-    error_page 404 ../www/penguinserv/errorPages/404Error.html;     # default error page
-    error_page 405 ../www/penguinserv/errorPages/405Error.html;     # default error page
+    error_page 404 web_server/www/penguinserv/errorPages/404Error.html;     # default error page
+    error_page 405 web_server/www/penguinserv/errorPages/405Error.html;     # default error page
 
 
     location / {
-        root ../www/penguinserv/;
+        root web_server/www/penguinserv/;
         index index.html;
         allow_methods GET;
     }
 
         location /pengu{
-        root ../www/penguinserv/;
+        root web_server/www/penguinserv/;
         index index.html;
         allow_methods GET;
     }
@@ -43,7 +43,7 @@ server {
     server_name server2.com;
 
     location / {
-        root ../www/penguinserv/;
+        root web_server/www/penguinserv/;
         index index.html;
         allow_methods GET POST;
     }
