--- a/web_server/configparser/defaultConfig/default.conf
+++ b/web_server/configparser/defaultConfig/default.conf
@@ -1,6 +1,5 @@
 server {
   listen 0.0.0.0:8001;                        # listening port, mandatory parameter
-  cgi .php testing
   server_name default;                # specify server_name, need to be added into /etc/hosts to work
   error_page 404 ../www/penguinserv/errorPages/404error.html;     # default error page
   client_max_body_size 1024;          # max request body size in bytes
@@ -8,10 +7,11 @@ server {
   index index.html;                   # default page when requesting a directory, index.html by default
 
   location / {                   
-      root ../www/penguinserv/;       # root folder of site directory, full or relative path, mandatory parameter
+      root ../www/otherroot/;       # root folder of site directory, full or relative path, mandatory parameter
       autoindex on;                   # turn on/off directory listing
       index index.html;               # default page when requesting a directory, copies root index by default
       allow_methods POST GET;         # allowed methods in loc, GET only by default
+      cgi .php testing
       }
 
   location /tours {      
