--- a/WebServer/ConfigFiles/testMultiple.conf
+++ b/WebServer/ConfigFiles/testMultiple.conf
@@ -1,14 +1,13 @@
 server {
     listen 8081;
     server_name server1.com;
-    cgi .php testing
-    error_page 404 WebServer/www/penguinserv/errorPages/404Error.html;     # default error page
-    error_page 405 WebServer/www/penguinserv/errorPages/405Error.html;     # default error page
+    error_page 404 ../www/penguinserv/errorPages/404Error.html;     # default error page
+    error_page 405 ../www/penguinserv/errorPages/405Error.html;     # default error page
+    root ../www/penguinserv;
 
 
     location / {
-        root WebServer/www/penguinserv/;
-        index index.html;
+        index /index.html;
         allow_methods GET;
     }
 }
@@ -26,14 +25,12 @@ server {
 
 
     location / {
-        root WebServer/www/penguinserv/;
-        index index.html;
+        index /index.html;
         allow_methods GET;
     }
 
         location /pengu{
-        root WebServer/www/penguinserv/;
-        index index.html;
+        index /index.html;
         allow_methods GET;
     }
 }
@@ -43,8 +40,7 @@ server {
     server_name server2.com;
 
     location / {
-        root WebServer/www/penguinserv/;
-        index index.html;
+        index /index.html;
         allow_methods GET POST;
     }
 
