--- a/WebServer/ConfigParser/DefaultConfig/default.conf
+++ b/WebServer/ConfigParser/DefaultConfig/default.conf
@@ -3,19 +3,19 @@ server {
   server_name default;                # specify server_name, need to be added into /etc/hosts to work
   error_page 404 WebServer/www/penguinserv/errorPages/404error.html;     # default error page
   client_max_body_size 1024;          # max request body size in bytes
-  root ../www/penguinserv/;           # root folder of site directory, full or relative path, mandatory parameter
-  index index.html;                   # default page when requesting a directory, index.html by default
+  root ../www/penguinserv;           # root folder of site directory, full or relative path, mandatory parameter
+  index /index.html;                   # default page when requesting a directory, index.html by default
 
   location / {                   
-      root ../www/penguinserv/;       # root folder of site directory, full or relative path, mandatory parameter
+      root ../www/penguinserv;       # root folder of site directory, full or relative path, mandatory parameter
       autoindex on;                   # turn on/off directory listing
-      index index.html;               # default page when requesting a directory, copies root index by default
+      index /index.html;               # default page when requesting a directory, copies root index by default
       allow_methods POST GET;         # allowed methods in location, GET only by default
       }
 
   location /tours {      
       autoindex on;
-      index indexTours.html;         
+      index /indexTours.html;         
       allow_methods POST GET DELETE;
       }
 
