feat: :art: fix default conf, test conf probably don't work, need to specify correct path

--- a/WebServer/ConfigFiles/testMultiple.conf
+++ b/WebServer/ConfigFiles/testMultiple.conf
@@ -7,8 +7,8 @@ server {
 
 
     location / {
-        root WebServer/www/penguinserv/;
-        index index.html;
+        root WebServer/www/penguinserv;
+        index /index.html;
         allow_methods GET;
     }
 }
