feat: :ambulance: add environment vars

--- a/WebServer/ConfigFiles/testCgi.conf
+++ b/WebServer/ConfigFiles/testCgi.conf
@@ -3,7 +3,7 @@ server {
     server_name server1.com;
     error_page 404 ../www/penguinserv/errorPages/404Error.html;     # default error page
     error_page 405 ../www/penguinserv/errorPages/405Error.html;     # default error page
-    root ../www/penguinserv/;
+    root ../www/penguinserv;
 
 
     location /cgiRoute {
