feat: :art: Hardcoded and printing in the terminal

--- a/WebServer/ConfigFiles/testCgi.conf
+++ b/WebServer/ConfigFiles/testCgi.conf
@@ -6,9 +6,9 @@ server {
     root ../www/penguinserv/;
 
 
-    location cgiRoute {
+    location cgiRoute/ {
         index index.html;
         allow_methods GET;
-        cgi .php /coolCgi
+        cgi .php coolCgi
     }
 }
