--- a/WebServer/ConfigFiles/testMultiple.conf
+++ b/WebServer/ConfigFiles/testMultiple.conf
@@ -8,7 +8,7 @@ server {
 
     location / {
         root WebServer/www/penguinserv;
-        index /index.html;
+        index index.html;
         allow_methods GET;
     }
 }
@@ -26,13 +26,13 @@ server {
 
 
     location / {
-        root WebServer/www/penguinserv/;
+        root WebServer/www/penguinserv;
         index index.html;
         allow_methods GET;
     }
 
         location /pengu{
-        root WebServer/www/penguinserv/;
+        root WebServer/www/penguinserv;
         index index.html;
         allow_methods GET;
     }
@@ -43,7 +43,7 @@ server {
     server_name server2.com;
 
     location / {
-        root WebServer/www/penguinserv/;
+        root WebServer/www/penguinserv;
         index index.html;
         allow_methods GET POST;
     }
