--- a/WebServer/ConfigFiles/testMultiple.conf
+++ b/WebServer/ConfigFiles/testMultiple.conf
@@ -1,9 +1,9 @@
 server {
     listen 8081;
     server_name server1.com;
-    error_page 404 ../www/penguinserv/errorPages/404Error.html;     # default error page
-    error_page 405 ../www/penguinserv/errorPages/405Error.html;     # default error page
-    root ../www/penguinserv;
+    error_page 404 WebServer/www/penguinserv/errorPages/404Error.html;     # default error page
+    error_page 405 WebServer/www/penguinserv/errorPages/405Error.html;     # default error page
+    root WebServer/www/penguinserv;
 
 
     location / {
