Tidy up code, Remove extra / for uri without location match

--- a/WebServer/ConfigParser/DefaultConfig/default.conf
+++ b/WebServer/ConfigParser/DefaultConfig/default.conf
@@ -9,7 +9,7 @@ server {
   location / {
       root WebServer/www/penguinserv;       # root folder of site directory, full or relative path, mandatory parameter
       autoindex on;                   # turn on/off directory listing
-      index /index.html;               # default page when requesting a directory, copies root index by default
+      index index.html;               # default page when requesting a directory, copies root index by default
       allow_methods POST GET;         # allowed methods in location, GET only by default
       }
 
