--- a/WebServer/ConfigFiles/testPorts.conf
+++ b/WebServer/ConfigFiles/testPorts.conf
@@ -15,6 +15,15 @@ server {
 server {
     listen 127.0.0.2:8080;
     server_name server2.com;
-	root WebServer/www/penguinserv/tours;
-	index indexTours.html
+	root WebServer/www/penguinserv;
+
+    location /tours {
+        autoindex on;
+        index indexTours.html;
+        allow_methods GET;
+    }
+
+    location / {                   
+        return /tours;                   # redirect
+    }
 }
