--- a/WebServer/ConfigFiles/testMultiple.conf
+++ b/WebServer/ConfigFiles/testMultiple.conf
@@ -4,11 +4,11 @@ server {
     error_page 404 WebServer/www/penguinserv/errorPages/404Error.html;     # default error page
     error_page 405 WebServer/www/penguinserv/errorPages/405Error.html;     # default error page
     root WebServer/www/penguinserv;
-
+	client_max_body_size 10M;
 
     location / {
         index index.html;
-        allow_methods GET;
+        allow_methods GET POST;
     }
 }
 
