--- a/WebServer/ConfigFiles/testMultiple.conf
+++ b/WebServer/ConfigFiles/testMultiple.conf
@@ -10,6 +10,9 @@ server {
         index index.html;
         allow_methods GET POST;
     }
+	location /delete_test {
+		allow_methods DELETE;
+	}
 }
 
 server {
