--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,5 @@
 server {
-  listen 127.0.0.1:8080;                        # listening port, mandatory parameter
+  listen 0.0.0.0:8080;                        # listening port, mandatory parameter
   server_name cool_server;                # specify server_name, need to be added into /etc/hosts to work
   error_page 404 WebServer/www/penguinserv/errorPages/404Error.html;     # default error page
   error_page 405 WebServer/www/penguinserv/errorPages/405Error.html;
@@ -31,13 +31,13 @@ server {
 
   location /cgiRoute {
       index index.html;
-      allow_methods GET;
-      cgi .php coolCgi
+      allow_methods GET POST;
+      cgi .php postCgi
     }
   }
 
   server {
-    listen 127.0.0.2:8081;
+    listen 0.0.0.0:8081;
     server_name bird.com;
     root WebServer/www/birdistheword;
     index index.html
