Fix delete problems

--- a/default.conf
+++ b/default.conf
@@ -11,7 +11,7 @@ server {
       root WebServer/www/penguinserv;       # root folder of site directory, full or relative path, mandatory parameter
       autoindex on;                   # turn on/off directory listing
       index index.html;               # default page when requesting a directory, copies root index by default
-      allow_methods POST GET;         # allowed methods in location, GET only by default
+      allow_methods POST GET DELETE;         # allowed methods in location, GET only by default
       }
 
   location /tours {
