Revert GET cgi test config

--- a/WebServer/ConfigFiles/testCgi.conf
+++ b/WebServer/ConfigFiles/testCgi.conf
@@ -9,6 +9,6 @@ server {
     location /cgiRoute {
         index index.html;
         allow_methods GET;
-        cgi .php postCgi
+        cgi .php coolCgi
     }
 }
