--- a/default.conf
+++ b/default.conf
@@ -32,7 +32,7 @@ server {
   location /cgiRoute {
       index index.html;
       allow_methods GET POST;
-      cgi .php coolCgi
+      cgi .php postCgi
     }
   }
 
